﻿Changelog
1.1.6
CSS Cleanups
moved back to red links ;/

1.1.5
added class .sidebar-no-widgets to handle the sidebar no widgets boxes instead of being static
changed .pagetitle to .page-title to be uniformative with the rest of the site
removed the "count" on how many entries are found during search and archive, added extra unnecessary load
the feed wasnt able to seperate post_types until now ;/ done
added support for custom support type archive loop
adjusted the colorations, added a:link and a:visited to the main style.css
added the remove_filter on the sidebars as well as the menubar so they don't get parsed with the wrong info in their loops.
moved the Easel options to right above appearance so it doesnt conflict with buddypress's positioning
removed the box-border and shadow on the wp-caption, fixed the alignment so it doesnt get overriden
moved the debug option for page load to the debug page itself
added the change to the footer-text to allow proper copyright information
CommPress merged into Easel now as an addon, new custom post tpe for Easel


1.1.4
removed the tabindex="4" from the comments.php
added comic-id-# (# = the_ID()) as part of the #comic-wrap as a class

1.1.3
Adding addon control to Easel
New general option, disable blog on home page and display comments on home page.  
To display comments on the home page, the home page post count must ALSO be set to 1.
Adding new blog template so that when you disable the blog on the home page there's a template available
that you can associate to a page.
Changing the way the addons load, they only load if they are enabled, that way optimizing their usage.
added comicpress light addon for easel, including the members only, playing now and showcase addons to the repository
Added new action location 'easel-menubar-mini-navigation' for mini navigation for comicpress light for easel
Addons now have their own tab in the easel -> options area.

1.1.2