@@ -42,6 +42,22 @@
 			<table class="widefat">
 				<thead>
 					<tr>
+						<th colspan="5"><?php _e('Custom Header','easel'); ?></th>
+					</tr>
+				</thead>
+				<tr class="alternate">
+					<th scope="row"><label for="custom_image_header_width"><?php _e('Custom Header Values','easel'); ?></label></th>
+					<td>
+						<?php _e('Width:','easel'); ?> <input type="text" size="5" name="custom_image_header_width" id="custom_image_header_width" value="<?php echo $easel_options['custom_image_header_width']; ?>" />px &nbsp;
+						<?php _e('Height:','easel'); ?> <input type="text" size="5" name="custom_image_header_height" id="custom_image_header_height" value="<?php echo $easel_options['custom_image_header_height']; ?>" />px<br />
+						<?php _e('Modify the height and width of the custom header *if* you use Appearance - Header','easel'); ?>
+					</td>
+				</tr>
+			</table>
+			
+			<table class="widefat">
+				<thead>
+					<tr>
 						<th colspan="3"><?php _e('Menubar','easel'); ?></th>
 					</tr>
 				</thead>
