@@ -6,7 +6,7 @@ Description: A theme with many different roles and capabilities, a framework-lik
 Author: Philip M. Hofer (Frumph)
 Author URI: http://frumph.net
 Tags: Dark, three-columns, left-sidebar, right-sidebar, fixed-width, custom-background, custom-menu, theme-options, threaded-comments, sticky-post, translation-ready 
-Version: 1.1.5
+Version: 1.1.6
 License: GNU General Public License, v3 (or newer)
 License URI: http://www.opensource.org/licenses/gpl-3.0.html
 */
@@ -1212,7 +1212,7 @@ table#wp-calendar td {
 
 /* comment form */
 
-#comment, #author, #email, #url, .s-search, .comicpress_control_panel_widget input {
+#comment, #author, #email, #url, .s-search, .easel_control_panel_widget input {
 	padding: 2px;
 	color: #000;
 	font-family: 'Verdana' , sans-serif;
@@ -1226,8 +1226,8 @@ table#wp-calendar td {
 }
 
 #comment:focus, #comment:hover, #author:hover, #email:hover, #url:hover, #author:focus, #email:focus, #url:focus,
-.comicpress_control_panel_widget #sname:focus, .comicpress_control_panel_widget #sname:hover,
-.comicpress_control_panel_widget #spassword:focus, .comicpress_control_panel_widget #spassword:hover {
+.easel_control_panel_widget #sname:focus, .easel_control_panel_widget #sname:hover,
+.easel_control_panel_widget #spassword:focus, .easel_control_panel_widget #spassword:hover {
 	background: #fff;
 }
 
@@ -1241,7 +1241,7 @@ table#wp-calendar td {
 	margin: 0 3px;
 }
 
-#submit, .searchform button, #comic button, .comicpress_control_panel_widget button {
+#submit, .searchform button, #comic button, .easel_control_panel_widget button {
 	background: #ccc;
 	color: #000;
 	-moz-border-radius: 6px;
@@ -1255,7 +1255,7 @@ table#wp-calendar td {
         );
 }
 
-.sidebar .widget_archive select, .comicpress_archive_dropdown_widget select {
+.sidebar .widget_archive select, .easel_archive_dropdown_widget select {
 	width: 180px;
 	-moz-border-radius: 10px 0 0 10px;
 	-khtml-border-radius: 10px 0 0 10px;
