@@ -1,7 +1,7 @@
 <?php
 /*
 Widget Name: Menubar Widget (wordpress 3.0 required)
-Widget URI: http://comicpress.org/
+Widget URI: http://comicpress.net/
 Description: Display a calendar of this months posts.
 Author: Philip M. Hofer (Frumph)
 Version: 1.07
